--- a/client/01-for-each.html
+++ b/client/01-for-each.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
-</head>
-<body>
-<div id="app"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>For Each</title>
+  </head>
+  <body>
+    <div id="app"></div>
 <script>
         const products = [
             { title: 'Burger', price: 121 },
@@ -18,5 +19,5 @@
             app.innerHTML += `<li>${product.title} - ${product.price}</li>`;
         })
     </script>
-</body>
+  </body>
 </html>
