--- a/client/02-map.html
+++ b/client/02-map.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app"></div>
+    <script>
+        const products = [
+            { title: 'Burger', price: 121 },
+            { title: 'Pizza', price: 20 },
+        ];
+        const app = document.getElementById('app');
+        const lis = products.map(product => {
+            return `<li>${product.title} - ${product.price}</li>`;
+        })
+        app.innerHTML = lis.join('');
+    </script>
 </body>
 </html>
